[FIX] Ubah bagian CV

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
-                    <button class="btn btn-dark rounded">DOWNLOAD CV</button>
+                    <button class="btn btn-dark rounded" href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link">DOWNLOAD CV</button>
                 </div>      
 
                 <div class="socials mt-4">
@@ -87,7 +87,7 @@
                         Sarana Informatika, dengan pengalaman magang sebagai administrasi 
                         departemen fasilitas. Terbiasa dalam menggunakan Bahasa pemrograman PHP 
                         dan MySQL.</p>
-                    <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
+                    <button class="btn btn-primary rounded mt-3" href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link">DOWNLOAD CV</button>                   
                 </div>
             </div>
         </div>
