[FIX] link CV dan icon

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
-                    <button class="btn btn-dark rounded" href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link">DOWNLOAD CV</button>
+                    <a href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link"><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>
                 </div>      
 
                 <div class="socials mt-4">
@@ -87,8 +87,8 @@
                         Sarana Informatika, dengan pengalaman magang sebagai administrasi 
                         departemen fasilitas. Terbiasa dalam menggunakan Bahasa pemrograman PHP 
                         dan MySQL.</p>
-                    <button class="btn btn-primary rounded mt-3" href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link">DOWNLOAD CV</button>                   
-                </div>
+                        <a href="https://drive.google.com/file/d/1MYtfey5smCM8hEeGVVRQv5G4GuEFamr9/view?usp=drive_link"><button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button></a>
+                    </div>
             </div>
         </div>
     </section>
@@ -412,7 +412,7 @@
                 <div class="col-sm-6">
                     <div class="socials">
                         <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                        <a class="social-item" href="mailto:bintanglaura222@gmail.com"><i class="ti-google"></i></a>
+                        <a class="social-item" href="mailto:bintanglaura222@gmail.com"><i class="ti-email"></i></a>
                         <a class="social-item" href="https://github.com/BintangLaura/"><i class="ti-github"></i></a>
                         <!-- <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a> -->
                     </div>
