[FIX] ubah keterangan gambar (2)

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="col-sm-6">
                     <div class="img-wrapper">
                         <img src="assets/imgs/Screenshot (1185).png" alt="">
-                        <div class="overlay">
+                        <div class="overlay">`
                             <div class="overlay-infos">
                                 <h5>Aplikasi Pendataan Siswa dengan CI3</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
