--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-sm-7 col-md-4 mb-5">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-crown"></i>
+                            <a href="sertifikat/10210016 Sertifikat Netacad.pdf"><i class="icon ti-crown"></i></a>
                             <h5>Python by CISCO Academy</h5>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                 <div class="col-sm-7 col-md-4 mb-5">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-desktop"></i>
+                            <a href="sertifikat/sertifikat bnsp-skema junior web.pdf"><i class="icon ti-desktop"></i></a>
                             <h5>Sertfikasi BNSP</h5>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                 <div class="col-sm-7 col-md-4 mb-5">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-bar-chart"></i>
+                            <a href="sertifikat/Sertifikat_IAII.pdf"><i class="icon ti-bar-chart"></i></a>
                             <h5>Uji Profisiensi Basis Data</h5>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <img src="assets/imgs/Screenshot (1186).png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Aplikasi Pengmbilan Sembako dengan CI3</h5>
+                                <h5>Aplikasi Pengambilan Sembako dengan CI3</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>  
